fixed bugs covers top bottom & controls info

--- a/public/spaceAttack!.css
+++ b/public/spaceAttack!.css
@@ -40,8 +40,6 @@ a {
 
 .spaceAttack {
   position: absolute;
-  width: 1400px;
-  height: 700px;
   background-image: url("./img/background.jpg");
 }
 .infoControls {
@@ -64,9 +62,10 @@ a {
 }
 .center {
   position: absolute;
-  top: 39vh;
+  top: 45%;
   width: 100%;
   font-size: 3em;
+  align-items: center;
   text-align: center;
 }
 .topLeft, .topRight, .bottomLeft, .bottomRight {
@@ -82,7 +81,7 @@ a {
 }
 .topLeft div, .topRight div, .bottomLeft div, .bottomRight div {
   position: absolute;
-  top: 20vh;
+  top: 60%;
   left: 10vw;
   line-height: 1.5em;
   color: inherit;
@@ -302,7 +301,7 @@ a {
   position: absolute;
   width: 100%;
   height: 10vh;
-  top: -11vh;
+  top: -10.9vh;
   background-color: black;
   z-index: 9;
 }
@@ -310,7 +309,7 @@ a {
   position: absolute;
   width: 100%;
   height: 10vh;
-  bottom: -11vh;
+  bottom: -10.9vh;
   background-color: black;
   z-index: 4;
 }
